tests/ui/reborrow/missing-generic-args-coerce-shared-issue-156315.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/missing-generic-args-coerce-shared-issue-156315.rs:15:29
   |
LL | struct CustomRef<'a, T>(&'a CustomMut);
   |                             ^^^^^^^^^ expected named lifetime parameter
   |
help: consider using the `'a` lifetime
   |
LL | struct CustomRef<'a, T>(&'a CustomMut<'a>);
   |                                      ++++

error[E0107]: missing generics for struct `CustomMut`
  --> $DIR/missing-generic-args-coerce-shared-issue-156315.rs:15:29
   |
LL | struct CustomRef<'a, T>(&'a CustomMut);
   |                             ^^^^^^^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/missing-generic-args-coerce-shared-issue-156315.rs:10:8
   |
LL | struct CustomMut<'a, T>(&'a mut T);
   |        ^^^^^^^^^     -
help: add missing generic argument
   |
LL | struct CustomRef<'a, T>(&'a CustomMut<T>);
   |                                      +++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0106, E0107.
For more information about an error, try `rustc --explain E0106`.
